--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack -w"
   },
   "keywords": [],
   "author": "",
