add logic auth and templates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "firebase": "^10.0.0"
+    "firebase": "^10.0.0",
+    "rxjs": "^7.8.1"
   },
   "name": "alurageek",
   "description": "Tendra las páginas:\r - Home\r - Productos\r - Añadir producto\r - Detalles de producto\r ### &copy;Desarrollado por Alexander Machicado G.",
